# htop-tycoon

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-06-29-delegation-design.md  2026-07-01-htop-tycoon-v3-design.md
scripts/: .gitkeep  qa_cjk.sh  qa_console_death.sh  qa_short.sh  qa_strategy_compare.sh
src/htop_tycoon/: __init__.py  __main__.py  cli_parser.py
src/htop_tycoon/bindings/: __init__.py  registry.py
src/htop_tycoon/data/: __init__.py  achievements.yaml  balance.yaml  combos.yaml  consoles.yaml  endings.yaml  events.yaml  genres.yaml  korean_names.yaml  seeds.yaml  themes.yaml
src/htop_tycoon/domain/: __init__.py  console_market.py  dept.py  employee.py  ending.py  enums.py  event.py  focus.py  ids.py  legacy.py  market.py  money.py  product.py  project.py  quality.py  regimes.py  rng.py  state.py
src/htop_tycoon/engine/: __init__.py  actions.py  ai_focus_policy.py  auto.py  award.py  cash_flow.py  competitor_actions.py  competitor_ai.py  condition_registry.py  console_market.py  critic.py  dept_focus.py  ending.py  endings.py  event_chain.py  event_log.py  events.py  game_dev.py  hr.py  market.py  metrics.py  names.py  product_market.py  productivity.py  regimes.py  release.py  rng.py  sales.py  startup.py  tick.py
src/htop_tycoon/engine/strategy/: __init__.py  aggressive.py  balanced.py  base.py  conservative.py  dispatch.py  genre_focus.py  meta_strategy.py  strategies.py  types.py
src/htop_tycoon/persistence/: __init__.py  deserialize.py  migration.py  serialize.py  storage.py
src/htop_tycoon/ui/: __init__.py  action_handlers.py  app.py  app.tcss  app_wiring.py  i18n.py  ime.py  mock_state.py  theme.py
src/htop_tycoon/ui/screens/: __init__.py  archive.py  console.py  employee_panel.py  ending.py  ending_screen.py  fire.py  focus_picker.py  game_starter.py  help.py  hire.py  new_project.py  promote.py  release.py  search.py  setup.py  strategy_picker.py
src/htop_tycoon/ui/widgets/: __init__.py  alert.py  department_detail.py  employee_table.py  event_log.py  footer.py  header.py  metric_bar.py  org_tree.py  strategy_status.py
tests/: conftest.py  test_actions.py  test_ai_focus_policy.py  test_alert_pilot.py  test_app_delegation_pilot.py  test_app_pilot.py  test_auto_execute.py  test_auto_hr.py  test_auto_tick_dispatch.py  test_balance.py  test_bind_en_ko.py  test_bindings_pilot.py  test_cjk_theme_audit.py  test_cli.py  test_cli_parser.py  test_competitor_ai.py  test_dept_employee.py  test_dept_focus.py  test_dept_focus_modifier.py  test_deserialize.py  test_domain_init.py  test_employee.py  test_employee_table_pilot.py  test_ending.py  test_ending_screen_pilot.py  test_endings_reachable.py  test_endings_reachable_aux.py  test_endings_yaml.py  test_engine_actions_edge.py  test_engine_award.py  test_engine_critic.py  test_engine_endings.py  test_engine_game_dev.py  test_engine_init.py  test_engine_market.py  test_engine_sales.py  test_engine_strategy.py  test_engine_tick_edge.py  test_enums.py  test_event_chain.py  (+57 more)
tests/engine/: test_endings.py  test_endings_types.py  test_hr.py  test_release_console.py  test_strategies.py
tests/fixtures/: frozen_hashes.yaml
tests/persistence/: test_migration.py  test_serialize.py  test_storage.py
tests/pilot/: __init__.py  test_auto_mode.py  test_auto_save_on_quit.py  test_bindings_router.py  test_boot.py  test_close_modal_lifecycle.py  test_ending_screen.py  test_event_log.py  test_footer_height.py  test_header_refresh.py  test_hire_action.py  test_hire_fire.py  test_keyboard_controls.py  test_metric_bar.py  test_modal_dismiss_lifecycle.py  test_modal_lock.py  test_modal_tick_safety.py  test_new_actions.py  test_new_screens.py  test_org_tree.py  test_promote_action.py  test_refresh_preserves_orgtree.py  test_release_console.py  test_save_load.py  test_save_load_roundtrip.py  test_screenshots_short_playthrough.py  test_start_game_action.py  test_startup_render.py  test_strategy_picker.py  test_tick_pause.py  test_tick_wiring.py  test_toggle_tree.py
tests/ui/: test_i18n.py
