[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "htop-tycoon"
version = "0.2.0"
description = "htop-styled TUI business simulator with 5 endings, Korean UI, and seedable deterministic simulation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "sigco3111", email = "" },
]
requires-python = ">=3.11,<3.13"
keywords = ["tui", "game", "simulation", "textual", "htop", "business"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "textual>=0.86,<1.0",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
htop-tycoon = "htop_tycoon.__main__:main"

[project.urls]
Homepage = "https://github.com/sigco3111/htop-tycoon"
Issues = "https://github.com/sigco3111/htop-tycoon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/htop_tycoon"]

[tool.hatch.build.targets.sdist]
include = [
    "src/htop_tycoon",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
