[project]
name = "htop-tycoon"
version = "3.0.0"
description = "htop-style TUI port of Kairosoft Game Dev Story with Strategy Manager auto-delegation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "sigco3111" },
]
keywords = ["tui", "game", "kairosoft", "htop", "textual", "tycoon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Simulation",
]

dependencies = [
    "textual>=8.2.0,<9.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "coverage>=7.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
htop-tycoon = "htop_tycoon.__main__:main"

[project.urls]
Homepage = "https://github.com/sigco3111/htop-tycoon"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htop_tycoon"]

# ---- ruff ----
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["htop_tycoon"]

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["textual.*"]
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["src"]

# ---- coverage ----
[tool.coverage.run]
branch = true
source = ["src/htop_tycoon"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80